--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.jsx",
+  "private": true,
   "dependencies": {
+    "axios": "^0.23.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "snowpack": "^3.8.8"
