--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "axios": "^0.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "snowpack": "^3.8.8"
